# flm_agent

./: .gitignore  README.md  pyproject.toml
data/processed/: combo_map.json  course_index.json  curriculum_map.json  prerequisites.json  program_learning_outcomes.json  programme_outcomes.json
data/raw/: ADY201m.MD  AI17_COM_1.MD  AI17_COM_2.MD  AI17_COM_3.MD  AI17_COM_4.MD  AID301c.md  AIG202c.MD  AIH301m.MD  AIL303m.MD  AIM301m.MD  AIP491.MD  ASR301c.MD  BDI302c.MD  CEA201.MD  COMBO_1.MD  COMBO_2.MD  COMBO_3.MD  COMBO_4.MD  CPV301.MD  CSD203.md  CSI106.MD  Curriculum.MD  Curriculum_k18_k19.md  Curriculum_k19_k20.MD  Curriculum_k20_k21.md  DAP391m.MD  DAT301m.MD  DBA103.MD  DBI202.MD  DBM302m.MD  DNG103.md  DNH103.md  DPL302m.MD  DSA103.MD  DSR301m.MD  DTB103.md  DTR103.MD  DWP301c.MD  ENW493c.MD  EXE101.MD  (+29 more)
docs/research/: bare_jrnl_new_sample4.tex  generate_plots.py  presentation.tex
evaluation/: golden_qa.json
evaluation/results/: baseline_20260322_034903.json  baseline_20260322_040326.json  benchmark_report.md  rag_20260322_034852.json  rag_20260322_035732.json
notebooks/: corpus_statistics.ipynb  schema_validation.ipynb  sparsity_analysis.ipynb
scripts/: fix_bdi302c.ps1  run_evaluation.py  run_ingestion.py  standardize_syllabi.ps1
src/: app.py  config.py  profiles.py
src/chain/: agent.py  graph.py  nodes.py  prompts.py  state.py
src/evaluation/: baseline.py  golden_set.py  ragas_eval.py  report.py
src/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py  structured.py
src/retrieval/: tools.py  (+1 more)
tests/: test_parser.py  test_structured.py
